add back workbooks

--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -25,10 +25,12 @@ import(clusterSim)
 import(clustree)
 import(data.table)
 import(dplyr)
+import(flexclust)
 import(flowCore)
 import(fpc)
 import(ggplot2)
 import(ggridges)
+import(randIndex)
 import(randomForst)
 importFrom(FlowSOM,BuildMST)
 importFrom(FlowSOM,BuildSOM)
@@ -49,6 +51,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,top_n)
 importFrom(flowCore,fsApply)
 importFrom(flowCore,read.flowSet)
 importFrom(flowStats,gaussNorm)
