--- a/CelltypeR/DESCRIPTION
+++ b/CelltypeR/DESCRIPTION
@@ -17,4 +17,5 @@ Imports:
         cluster(>= 2.1.4),
         fpc(>= 2.2.9),
         clustree(>= 0.5.0),
-        igraph(>= 1.3.5)
+        igraph(>= 1.3.5),
+        flexclust(>= 1.4.1)
