--- a/CelltypeR/DESCRIPTION
+++ b/CelltypeR/DESCRIPTION
@@ -18,4 +18,5 @@ Imports:
         fpc(>= 2.2.9),
         clustree(>= 0.5.0),
         igraph(>= 1.3.5),
-        flexclust(>= 1.4.1)
+        flexclust(>= 1.4.1),
+        kit(>= 0.0.12)
