--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -51,7 +51,6 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
-importFrom(dplyr,top_n)
 importFrom(flowCore,fsApply)
 importFrom(flowCore,read.flowSet)
 importFrom(flowStats,gaussNorm)
@@ -59,5 +58,6 @@ importFrom(fpc,calinhara)
 importFrom(ggplot2,theme)
 importFrom(ggridges,geom_density_ridges)
 importFrom(igraph,membership)
+importFrom(kit,topn)
 importFrom(randomForest,predict)
 importFrom(randomForest,randomForest)
