--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -31,12 +31,10 @@ import(clusterSim)
 import(clustree)
 import(data.table)
 import(dplyr)
-import(flexclust)
 import(flowCore)
 import(fpc)
 import(ggplot2)
 import(ggridges)
-import(randIndex)
 import(randomForst)
 importFrom(FlowSOM,BuildMST)
 importFrom(FlowSOM,BuildSOM)
@@ -58,6 +56,7 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(flexclust,randIndex)
 importFrom(flowCore,fsApply)
 importFrom(flowCore,read.flowSet)
 importFrom(flowStats,gaussNorm)
