fix typo randomForest

--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -35,6 +35,7 @@ import(flowCore)
 import(fpc)
 import(ggplot2)
 import(ggridges)
+import(randomForest)
 import(randomForst)
 importFrom(FlowSOM,BuildMST)
 importFrom(FlowSOM,BuildSOM)
