--- a/CelltypeR/DESCRIPTION
+++ b/CelltypeR/DESCRIPTION
@@ -19,5 +19,7 @@ Imports:
         clustree(>= 0.5.0),
         igraph(>= 1.3.5),
         flexclust(>= 1.4.1),
-        kit(>= 0.0.12)
+        kit(>= 0.0.12),
+        randomForest(>= 4.7.1.1)
+        
 
