--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -65,5 +65,5 @@ importFrom(ggplot2,theme)
 importFrom(ggridges,geom_density_ridges)
 importFrom(igraph,membership)
 importFrom(kit,topn)
-importFrom(randomForest,predict)
 importFrom(randomForest,randomForest)
+importFrom(stats,predict)
