--- a/CelltypeR/DESCRIPTION
+++ b/CelltypeR/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
         igraph(>= 1.3.5),
         flexclust(>= 1.4.1),
         kit(>= 0.0.12),
-        randomForest(>= 4.7.1.1)
+        randomForest(>= 4.7.1.1),
+        stats(>= 4.2.1)
         
 
