--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -32,6 +32,7 @@ import(clustree)
 import(data.table)
 import(dplyr)
 import(flowCore)
+import(foreach)
 import(fpc)
 import(ggplot2)
 import(ggridges)
@@ -52,6 +53,8 @@ importFrom(cluster,daisy)
 importFrom(clusterSim,index.DB)
 importFrom(clustree,clustree)
 importFrom(data.table,melt)
+importFrom(doParallel,registerDoParallel)
+importFrom(doParallel,stopImplicitCluster)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
