--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -4,6 +4,7 @@ export(Prep_for_stats)
 export(RFM_predict)
 export(RFM_train)
 export(annotate)
+export(annotate_df)
 export(clust_stability)
 export(cluster_annotate)
 export(explore_param)
@@ -69,4 +70,5 @@ importFrom(ggridges,geom_density_ridges)
 importFrom(igraph,membership)
 importFrom(kit,topn)
 importFrom(randomForest,randomForest)
+importFrom(reshape2,melt)
 importFrom(stats,predict)
