--- a/CelltypeR/NAMESPACE
+++ b/CelltypeR/NAMESPACE
@@ -15,6 +15,7 @@ export(get_annotation)
 export(get_clusters)
 export(harmonize)
 export(make_seu)
+export(permutation_test_multi)
 export(plot_corr)
 export(plot_lab_clust)
 export(plot_randindex)
@@ -26,6 +27,7 @@ export(seurat_predict)
 import(FlowSOM)
 import(Rphenograph)
 import(Seurat)
+import(aovperm)
 import(caret)
 import(cluster)
 import(clusterSim)
@@ -35,8 +37,10 @@ import(dplyr)
 import(flowCore)
 import(foreach)
 import(fpc)
+import(from)
 import(ggplot2)
 import(ggridges)
+import(permuco)
 import(randomForest)
 importFrom(FlowSOM,BuildMST)
 importFrom(FlowSOM,BuildSOM)
